Fixed menu z-index.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -572,7 +572,7 @@ body > nav {
   top: 0;
   transition: width 300ms ease-out;
   width: 0;
-  z-index: 10000; }
+  z-index: 9998; }
   body > nav.opened {
     pointer-events: all;
     width: 25vw; }
