--- a/assets/sass/partials/base/_menu.scss
+++ b/assets/sass/partials/base/_menu.scss
@@ -17,7 +17,7 @@ body > nav {
   top: 0;
   transition: width 300ms ease-out;
   width: 0;
-  z-index: $z-top;
+  z-index: $z-top - 2;
 
   &.opened {
     pointer-events: all;
